[project]
name = "structfrommotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
    "open3d>=0.13.0",
    "opencv-python>=4.5.0",
    "plyfile>=0.7.4",
    "scipy>=1.7.0",
    "tqdm>=4.62.0",
]
